# snapper

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  TERMS.md  alembic.ini  caddy-entrypoint.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  pytest.ini  requirements.txt  setup.sh  slack-app-manifest.json
alembic/: env.py
app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  redis_client.py
docs/: AI_PROVIDERS.md  API.md  ARCHITECTURE.md  BAD_ACTOR_DETECTION.md  BROWSER_EXTENSION.md  E2E_TEST_PLAN.md  ENTERPRISE.md  GETTING_STARTED.md  INSTALL.md  OPENCLAW_INTEGRATION.md  PUBLIC-API.md  SECURITY.md  SLACK_SETUP.md  TELEGRAM_SETUP.md  TRAFFIC_CAPTURE.md  USER_GUIDE.md  cio-presentation-guide.md  cio-presentation.html  investor-faq.md
extension/: background.js  manifest.json
hooks/: github-hook.sh  gmail-hook.sh
monitoring/: prometheus.yml
scripts/: claude-code-hook.sh  claude-code-setup.sh  cline-hook.sh  cursor-hook.sh  e2e_claude_code_test.sh  e2e_integrations_test.sh  e2e_live_test.sh  e2e_meta_admin_test.sh  e2e_multiuser_test.sh  e2e_openclaw_test.sh  e2e_threat_test.sh  openclaw-hook.sh  quick-setup.sh  run-e2e-tests.sh  setup-sso.sh  shadow-ai-scanner.sh  snapper-cli.py  snapper-exec-wrapper.sh  threat_simulator.py  windsurf-hook.sh
sdk/: README.md  pyproject.toml
sdk/snapper/: __init__.py  anthropic_wrapper.py  base.py  gemini_wrapper.py  openai_wrapper.py
tests/: TEST_PLAN.md  __init__.py  conftest.py  run_integration_tests.sh  (+78 more)
(+233 files in other folders)
